@@ -1,3 +1,13 @@
+2000-08-10  Not Zed  <NotZed@HelixCode.com>
+
+	* filter-driver.c (filter_driver_run): Save the results of
+	searches till we're done.  So we dont have to go strduping strings
+	agian and again and again and again ...  Remove all the unecessary
+	strdups.
+	(do_colour): Implement.
+	(filter_driver_run): Change for append api change.
+	(free_key): Removed.
+
 2000-08-09  Not Zed  <NotZed@HelixCode.com>
 
 	* rule-context.c (rule_context_add_rule_gui): Helper function to
